Kubernetes/kustomize/overlays/production/tunnel.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: cloudtunnel
  name: cloudtunnel
  namespace: servicemesh
spec:
  selector:
    matchLabels:
      app: cloudtunnel
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: cloudtunnel
      annotations:
        consul.hashicorp.com/connect-inject: "true"
        consul.hashicorp.com/transparent-proxy: "true" # Can use K8 DNS instead of having to
    spec:
      # https://stackoverflow.com/questions/49368047/what-is-the-equivalent-for-depends-on-in-kubernetes
      containers: 
        - name: tunnel
          image: cloudflare/cloudflared:latest
          imagePullPolicy: "Always"
          args: 
            - tunnel
            - run
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
          resources:
            limits:
              memory: 512M 
      restartPolicy: Always
      serviceAccount: cloudtunnel

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: cloudtunnel
  name: cloudtunnel
  namespace: servicemesh
spec:
  selector:
    app: cloudtunnel
  ports:
    - port: 7026
      targetPort: 8096
