Kubernetes/kustomize/overlays/production/ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: media-ingress
  namespace: media 
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - kind: Rule
      match: Host(`bazarr.homelab.ezequielvalencia.com`)
      services:
        - kind: Service
          name: mediaarr
          namespace: media
          port: bazarr
    - kind: Rule
      match: Host(`sonarr.homelab.ezequielvalencia.com`)
      services:
        - kind: Service
          name: mediaarr
          namespace: media
          port: sonarr
    - kind: Rule
      match: Host(`jackett.homelab.ezequielvalencia.com`)
      services:
        - kind: Service
          name: mediavpn
          namespace: media
          port: jackett
    - kind: Rule
      match: Host(`lidarr.homelab.ezequielvalencia.com`)
      services:
        - kind: Service
          name: mediaarr
          namespace: media
          port: lidarr
    - kind: Rule
      match: Host(`qbit.homelab.ezequielvalencia.com`)
      services:
        - kind: Service
          name: mediavpn
          namespace: media
          port: qbit-web-ui
    - kind: Rule
      match: Host(`jellyfin.homelab.ezequielvalencia.com`)
      services:
        - kind: Service
          name: jellyfin
          namespace: media
          port: web-ui

# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: ingress
#   namespace: media
# spec:
#   rules:
#     - host: bazarr.homelab.ezequielvalencia.com
#       http:
#         paths:
#           - path: /
#             pathType: Prefix
#             backend:
#               service:
#                 name:  mediavpn
#                 port:
#                   name: bazarr
#     - host: sonarr.homelab.ezequielvalencia.com
#       http:
#         paths:
#           - path: /
#             pathType: Prefix
#             backend:
#               service:
#                 name:  mediavpn
#                 port:
#                   name: sonarr
#     - host: jackett.homelab.ezequielvalencia.com
#       http:
#         paths:
#           - path: /
#             pathType: Prefix
#             backend:
#               service:
#                 name:  mediavpn
#                 port:
#                   name: jackett
#     - host: lidarr.homelab.ezequielvalencia.com
#       http:
#         paths:
#           - path: /
#             pathType: Prefix
#             backend:
#               service:
#                 name:  mediavpn
#                 port:
#                   name: lidarr
#     - host: qbit.homelab.ezequielvalencia.com
#       http:
#         paths:
#           - path: /
#             pathType: Prefix
#             backend:
#               service:
#                 name:  mediavpn
#                 port:
#                   name: qbit-web-ui
#     - host: jellyfin.homelab.ezequielvalencia.com
#       http:
#         paths:
#           - path: /
#             pathType: Prefix
#             backend:
#               service:
#                 name:  jellyfin
#                 port:
#                   name: web-ui
